Third time's a charm

--- a/Humour.html
+++ b/Humour.html
@@ -257,7 +257,7 @@ $(document).ready(function () {
 
 
 <p>If you want to chat about science or education, or if you are interested in me doing some commission illustration work for you, get in touch with me!</p>
-<p><img align="centre" width="600" style="padding: 15px" src="./Phage-bacteria_competition.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Cas9dcas9.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Feb_2021.tiff"> <img align="centre" width="600" style="padding: 15px" src="./January_21.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Mars_20205.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Mars_20207.tiff"></p>
+<p><img align="centre" width="1000" style="padding: 15px" src="./hum.png"></p>
 
 
 
