--- a/sciil.html
+++ b/sciil.html
@@ -257,7 +257,7 @@ $(document).ready(function () {
 
 
 <p>If you want to chat about science or education, or if you are interested in me doing some commission illustration work for you, get in touch with me!</p>
-<p><img align="centre" width="600" style="padding: 15px" src="./Emanuel_skin.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Epigenetics-for-Pedro-Oliveira.tiff"> <img align="centre" width="600" style="padding: 15px" src="./CRISPRi_text.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Gizem_cell_wall.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Ingo_space.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Karsten_-_Breast_cancer.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Laura_babybrain.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Tanja_DNA.tiff"></p>
+<p><img align="centre" width="1000" style="padding: 15px" src="./sci_ill.png"></p>
 
 
 
