--- a/Others.html
+++ b/Others.html
@@ -256,7 +256,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img align="centre" width="600" style="padding: 15px" src="./Madrid.tiff"> <img align="centre" width="600" style="padding: 15px" src="./ParisSki.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Cascais.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Lisboa.tiff"> <img align="centre" width="600" style="padding: 15px" src="./ParisPan.tiff"> <img align="centre" width="600" style="padding: 15px" src="./ParisMet.tiff"> <img align="centre" width="600" style="padding: 15px" src="./Roma.tiff"> <img align="centre" width="600" style="padding: 15px" src="./25_De_Abril_2020.tiff"></p>
+<p><img align="centre" width="1000" style="padding: 15px" src="./ill.png"></p>
 
 
 
